--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,18 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="home">Home</a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="cadastro">Cadastro</a>
+
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink=""></a>
+
+
+
+      </ul>
+    </div>
+  </div>
+</nav>
