--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -23,6 +23,14 @@
       <input type="date" formControlName="date" class="form-control" id="date" placeholder="Data">
     </div>
 
+    <div class="mb-4">
+      <label for="img" class="form-label">Imagem:</label>
+      <input type="text" formControlName="img" class="form-control" id="img" placeholder="Digite o link da imagem">
+      <div *ngIf="submitted && img.invalid">
+        <small class="text-danger">Imagem Inválida!</small>
+      </div>
+    </div>
+
 
     <div class="mb-3">
       <label for="descrição" class="form-label">Descrição:</label>
@@ -81,6 +89,7 @@
       <th scope="col">Descrição</th>
       <th scope="col">Preço</th>
       <th scope="col">Data</th>
+      <th scope="col">Imagem</th>
       <th scope="col">Status</th>
     </tr>
   </thead>
@@ -92,11 +101,13 @@
       <td>{{cadastro.preco}}</td>
       <td>{{cadastro.date}}</td>
       <td>{{cadastro.status}}</td>
+      <td><img class="d-flex m-auto" src="{{cadastro.img}}" width="100px"></td>
       <td>{{cadastro.img}}</td>
       <td>
         <button type="button" class="btn btn-primary me-1" (click)="edit(cadastro)" >Editar</button>
-        <button type="button" class="btn btn-primary" (click)="delete(cadastro)">Excluir</button>
+        <button type="button" class="btn btn-primary " (click)="delete(cadastro)">Excluir</button>
       </td>
     </tr>
-  </tbody>
-</table>
+      </tbody>
+    </table>
+
