--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,23 @@
 <div class="container">
-  <div class="display-6 text-center">Carros a venda</div>
+  <div class="display-6 text-center">Carros à venda</div>
   <div class="d-flex gap-5 mt-2">
     <div class="col" *ngFor="let cadastro of cadastro">
       <div *ngIf="cadastro.status" style="position: relative;">
         <div class="card m-auto" style="width: 18rem; height: 34rem;">
           <img src="{{cadastro.img}}" class="card-img-top" alt="{{cadastro.titulo}}" style="height: 190px;">
-          <div class="card-body">
+          <div class="card-body d-flex flex-column">
             <h3 class="card-title">{{cadastro.titulo}}</h3>
             <h3 class="mt-5">{{cadastro.preco | currency:'BRL':'symbol':'1.2-2'}}</h3>
             <h3 class="card-text mb-3 mt-5">{{cadastro.descricao}}</h3>
-          </div>
-          <div style="position: absolute; bottom: 0;left: 12px;">
-            <h5 style="font-style: italic;">Ano do carro {{cadastro.date | date:'dd/MM/yyyy'}}</h5>
-            <a href="cadastro"  class="btn btn-primary">Verificar</a>
+            <div class="mt-auto text-center">
+              <div class="position-relative">
+                <h5 style="font-style: italic;">Ano do carro {{cadastro.date | date:'dd/MM/yyyy'}}</h5>
+                <a href="cadastro" class="btn btn-primary">Verificar</a>
+              </div>
+            </div>
           </div>
         </div>
-
-
-
-
-
+      </div>
+    </div>
+  </div>
+</div>
